--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist=py,docs
+envlist=py{27,34},docs
 
-[testenv:py]
+[testenv]
 deps=
     -rtest-requirements.txt
     -rrequirements.txt
@@ -14,6 +14,12 @@ commands=
         --cov-report term-missing \
         --capture=no \
         -v
+
+[testenv:lint]
+deps=
+    pylint
+commands=
+    -pylint pyEXOS
 
 [testenv:docs]
 deps=
