--- a/tox.ini
+++ b/tox.ini
@@ -30,3 +30,5 @@ changedir=docs
 commands=
     sphinx-build -W -b html -d {envtmpdir}/_build/doctrees . {envtmpdir}/_build/html
 
+[flake8]
+ignore = E129
